[package]
# build = "build.rs"
edition = "2021"
name = "backend"
version = "0.1.0"

[dependencies]
clap = {version = "4.5.23", features = ["derive"]}
include_dir = "0.7.4"
reqwest = {version = "0.12.8", features = ["json", "rustls-tls"], default-features = false}
salvo = {version = "0.74.3"}
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
sqlx = {version = "0.8.2", features = ["runtime-tokio"]}
tokio = {version = "1.42.0", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
