[package]
# build = "build.rs"
edition = "2021"
name = "backend"
version = "0.1.0"

[dependencies]
base64 = "0.22.1"
bcrypt = "0.17.0"
clap = {version = "4.5.23", features = ["derive"]}
include_dir = "0.7.4"
lazy_static = "1.5.0"
mime_guess = "2.0.5"
reqwest = {version = "0.12.8", features = ["json"], default-features = false}
salvo = {version = "0.79.0", features = ["logging", "cors"]}
serde = {version = "1.0.216", features = ["derive"]}
serde_json = "1.0.133"
tokio = {version = "1.43.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = {version = "1.11.0", features = ["v4"]}
